--- a/ClinicManagement/appsettings.json
+++ b/ClinicManagement/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "AppDbContext": ""
+    "AppDbContext": "server=localhost;uid=root;pwd=password;database=clinic_management"
   }
 }
