--- a/ClinicManagement/ClinicManagement.csproj
+++ b/ClinicManagement/ClinicManagement.csproj
@@ -15,14 +15,12 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.4" />
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="7.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Extensions\" />
-    <Folder Include="Models\PacientModels\" />
-    <Folder Include="Models\ProcedureModels\" />
-    <Folder Include="Models\VisitModels\" />
+    <Folder Include="Controllers\" />
   </ItemGroup>
 
 </Project>
