--- a/Clinic.Web/Clinic.Web.csproj
+++ b/Clinic.Web/Clinic.Web.csproj
@@ -21,6 +21,11 @@
 
   <ItemGroup>
     <Folder Include="Controllers\" />
+    <Folder Include="Entities\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Clinic.Domain\Clinic.Domain.csproj" />
   </ItemGroup>
 
 </Project>
