--- a/Clinic.Data/Clinic.Data.csproj
+++ b/Clinic.Data/Clinic.Data.csproj
@@ -22,6 +22,7 @@
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="7.0.14" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.14">
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
