--- a/Clinic.Services/Clinic.Services.csproj
+++ b/Clinic.Services/Clinic.Services.csproj
@@ -19,6 +19,7 @@
 
     <ItemGroup>
       <PackageReference Include="AutoMapper" Version="12.0.1" />
+      <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.14" />
       <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
       <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
