--- a/Clinic.Web/appsettings.json
+++ b/Clinic.Web/appsettings.json
@@ -8,5 +8,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "AppDbContext": "server=localhost;uid=root;pwd=password;database=clinic_management"
+  },
+  "JwtBearer": {
+    "SigningKey": "qwertyuiopasdfghjklzxcvbnm1234567890",
+    "ValidIssuer": "Identity.Api",
+    "ValidAudience": "Identity.Services",
+    "ExpiresInSeconds": 1200
   }
 }
