--- a/Clinic.Data/Clinic.Data.csproj
+++ b/Clinic.Data/Clinic.Data.csproj
@@ -10,6 +10,9 @@
       <Reference Include="Microsoft.EntityFrameworkCore">
         <HintPath>..\..\..\..\.nuget\packages\microsoft.entityframeworkcore\7.0.9\lib\net6.0\Microsoft.EntityFrameworkCore.dll</HintPath>
       </Reference>
+      <Reference Include="Microsoft.EntityFrameworkCore.SqlServer">
+        <HintPath>..\..\..\.nuget\packages\microsoft.entityframeworkcore.sqlserver\7.0.14\lib\net6.0\Microsoft.EntityFrameworkCore.SqlServer.dll</HintPath>
+      </Reference>
     </ItemGroup>
 
     <ItemGroup>
