--- a/Clinic.Web/appsettings.json
+++ b/Clinic.Web/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "AppDbContext": "server=localhost;uid=root;pwd=password;database=clinic_management"
+    "AppDbContext": "Server= ClinicManagement.mssql.somee.com ; Database=ClinicManagement; User Id=Muhammadjon05_SQLLogin_1; Password=hpo3rtj1h7;TrustServerCertificate=true"
   },
   "JwtBearer": {
     "SigningKey": "qwertyuiopasdfghjklzxcvbnm1234567890",
