--- a/Clinic.Services/Clinic.Services.csproj
+++ b/Clinic.Services/Clinic.Services.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Clinic.Data\Clinic.Data.csproj" />
+      <ProjectReference Include="..\Clinic.Domain\Clinic.Domain.csproj" />
       <ProjectReference Include="..\Clinic.ViewModel\Clinic.ViewModel.csproj" />
     </ItemGroup>
 
